--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
             <label>
               netID<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off"/>
+            <input type="netID"required autocomplete="off"/>
           </div>
               
           <div class="field-wrap">
@@ -121,7 +121,7 @@
             <label>
               netID<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off"/>
+            <input type="netID"required autocomplete="off"/>
           </div>
           
           <div class="field-wrap">
