--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -1,25 +1,31 @@
 {% extends 'layout.html' %}
-{% block heading %}Edit User Profile: {{drinker.name}}{% endblock %}
+{% block heading %}Edit User Profile: {{user.first_name}}{% endblock %}
 {% block content %}
-<form action="{{url_for('edit_drinker', name=drinker.name)}}" method="POST">
+<form action="{{url_for('edit_person', netid=user.netid)}}" method="POST">
   {{form.csrf_token}}
   <p>
-    Name: {{form.name}}
-    {% if form.name.errors %}
-    <ul>{% for error in form.name.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    First Name: {{form.first_name}}
+    {% if form.first_name.errors %}
+    <ul>{% for error in form.first_name.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
   <p>
-    Address: {{form.address}}
-    {% if form.address.errors %}
-    <ul>{% for error in form.address.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    Last Name: {{form.last_name}}
+    {% if form.last_name.errors %}
+    <ul>{% for error in form.last_name.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
-  <p>Beer(s) liked:
+  <p>
+    Email: {{form.email}}
+    {% if form.email.errors %}
+    <ul>{% for error in form.email.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p>Interest(s):
     <ul>
-      {% for beer, field in form.beer_fields() %}
+      {% for interest in form.interests %}
       <li>
-        {{beer}}: {{field}}
+        {{interest.field}}: {{field}}
         {% if field.errors %}
         <ul>{% for error in field.errors %}<li>{{error}}</li>{% endfor %}</ul>
         {% endif %}
@@ -27,17 +33,17 @@
       {% endfor %}
     </ul>
   </p>
-  <p>Bar(s) frequented:
-    <ul>
-      {% for bar, field in form.bar_fields() %}
-      <li>
-        {{bar}}: {{field}}
-        {% if field.errors %}
-        <ul>{% for error in field.errors %}<li>{{error}}</li>{% endfor %}</ul>
-        {% endif %}
-      </li>
-      {% endfor %}
-    </ul>
+  <p>
+    Department 1: {{form.department1}}
+    {% if form.department1.errors %}
+    <ul>{% for error in form.department1.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p>
+    Department 2: {{form.department2}}
+    {% if form.department2.errors %}
+    <ul>{% for error in form.department2.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
   </p>
   <hr/>
   <input type="reset" value="Reset"/>
