--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,10 @@
   <head>
     <title>Research Finder</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
-    <link rel="stylesheet" href="/static/css/style.css" type="text/css" media="screen"/>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="/static/css/bootstrap.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="/static/css/searchpage.css" type="text/css" media="screen"/>
+    <script src="/static/js/jquery-3.2.1.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
   </head>
   <body>
     <h1><img src="/static/img/researchlogo.jpg" style="float:right" height="100" width="100"/> Research Finder <a href="/"></a></h1>
