--- a/templates/searchpage.html
+++ b/templates/searchpage.html
@@ -1,4 +1,7 @@
 {% extends 'layout.html' %}
+{% block css %}
+<link rel="stylesheet" href="/static/css/searchpage.css" type="text/css" media="screen"/>
+{% endblock %}
 {% block heading %}Search{% endblock %}
 {% block content %}
 <div class="container">
