--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
     <link rel="stylesheet" href="/static/css/bootstrap.css" type="text/css" media="screen"/>
     {% block css %}{% endblock %}
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/bootstrap.js"></script>
   </head>
   <body>
