--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -21,7 +21,37 @@
     <ul>{% for error in form.email.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
-  <p>Interest(s):
+  <p id="role">
+    {{form.role.label}}: {{form.role}}
+    {% if form.role.errors %}
+    <ul>{% for error in form.role.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p class="faculty">
+    {{form.title.label}}: {{form.title}}
+    {% if form.title.errors %}
+    <ul>{% for error in form.title.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p class="faculty">
+    {{form.opening.label}}: {{form.opening}}
+    {% if form.opening.errors %}
+    <ul>{% for error in form.opening.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p class="student">
+    {{form.status.label}}: {{form.status}}
+    {% if form.status.errors %}
+    <ul>{% for error in form.status.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p class="student">
+    {{form.start_year.label}}: {{form.start_year}}
+    {% if form.start_year.errors %}
+    <ul>{% for error in form.start_year.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+ <!--  <p>Interest(s):
     <ul>
       {% for interest in form.interests %}
       <li>
@@ -32,19 +62,7 @@
       </li>
       {% endfor %}
     </ul>
-  </p>
-  <p>
-    Department 1: {{form.department1}}
-    {% if form.department1.errors %}
-    <ul>{% for error in form.department1.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p>
-    Department 2: {{form.department2}}
-    {% if form.department2.errors %}
-    <ul>{% for error in form.department2.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
+  </p> -->
   <hr/>
   <input type="reset" value="Reset"/>
   <input type="submit" value="Submit"/>
