--- a/templates/login.html
+++ b/templates/login.html
@@ -19,4 +19,7 @@
   <input type="submit" value="Submit"/>
   {% if 'database' in form.errors %}<p>{{form.errors['database']}}</p>{% endif %}
 </form>
+<p>
+  <a href="{{url_for('signup')}}">Do not have an account yet?</a>
+</p>
 {% endblock %}
