Change title and status to select

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
 <p>Department(s):
   <ul>
     {% for department in user.departments %}
-    <li>{{department.name}}</li>
+    <li>{{department.dept_id}}</li>
     {% endfor %}
   </ul>
 </p>
