--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -21,6 +21,24 @@
     <ul>{% for error in form.email.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
+  <p>
+    Interest(s): {{form.interests}}
+    {% if form.interests.errors %}
+    <ul>{% for error in form.interests.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p>
+    Department 1: {{form.department1}}
+    {% if form.department1.errors %}
+    <ul>{% for error in form.department1.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p>
+    Department 2: {{form.department2}}
+    {% if form.department2.errors %}
+    <ul>{% for error in form.department2.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
   <p id="role">
     {{form.role.label}}: {{form.role}}
     {% if form.role.errors %}
@@ -51,18 +69,6 @@
     <ul>{% for error in form.start_year.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
- <!--  <p>Interest(s):
-    <ul>
-      {% for interest in form.interests %}
-      <li>
-        {{interest.field}}: {{field}}
-        {% if field.errors %}
-        <ul>{% for error in field.errors %}<li>{{error}}</li>{% endfor %}</ul>
-        {% endif %}
-      </li>
-      {% endfor %}
-    </ul>
-  </p> -->
   <hr/>
   <input type="reset" value="Reset"/>
   <input type="submit" value="Submit"/>
