--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -1,42 +1,57 @@
 {% extends 'layout.html' %}
-{% block heading %}Edit User Profile: {{user.first_name}}{% endblock %}
+{% block css %}
+<link rel="stylesheet" href="/static/css/user_info.css" type="text/css" media="screen"/>
+{% endblock %}
+{% block heading %}Edit Profile: {{user.first_name}} {{user.last_name}}{% endblock %}
 {% block content %}
 <form action="{{url_for('edit_person', netid=user.netid)}}" method="POST">
   {{form.csrf_token}}
-  <p>
-    First Name: {{form.first_name}}
+<p>
+    {{form.first_name.label}}: {{form.first_name}}
     {% if form.first_name.errors %}
     <ul>{% for error in form.first_name.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
   <p>
-    Last Name: {{form.last_name}}
+    {{form.last_name.label}}: {{form.last_name}}
     {% if form.last_name.errors %}
     <ul>{% for error in form.last_name.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
   <p>
-    Email: {{form.email}}
+    {{form.email.label}}: {{form.email}}
     {% if form.email.errors %}
     <ul>{% for error in form.email.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
   <p>
-    Interest(s): {{form.interests}}
-    {% if form.interests.errors %}
-    <ul>{% for error in form.interests.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p>
-    Department 1: {{form.department1}}
+    {{form.department1.label}}: {{form.department1}}
     {% if form.department1.errors %}
     <ul>{% for error in form.department1.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
   <p>
-    Department 2: {{form.department2}}
+    {{form.department2.label}}: {{form.department2}}
     {% if form.department2.errors %}
     <ul>{% for error in form.department2.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p>
+    {{form.interests.label}}: {{form.interests}}
+    {% if form.interests.errors %}
+    <ul>{% for error in form.interests.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p>
+    {{form.website.label}}: {{form.website}}
+    {% if form.website.errors %}
+    <ul>{% for error in form.website.errors %}<li>{{error}}</li>{% endfor %}</ul>
+    {% endif %}
+  </p>
+  <p>
+    {{form.resume.label}}: {{form.resume}}
+    {% if form.resume.errors %}
+    <ul>{% for error in form.resume.errors %}<li>{{error}}</li>{% endfor %}</ul>
     {% endif %}
   </p>
   <p id="role">
@@ -74,4 +89,7 @@
   <input type="submit" value="Submit"/>
   {% if 'database' in form.errors %}<p>{{form.errors['database']}}</p>{% endif %}
 </form>
+{% endblock %}
+{% block jquery %}
+<script src="/static/js/user_info.js"></script>
 {% endblock %}
