--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,25 +1,25 @@
 {% extends 'layout.html' %}
-{% block heading %}User Profile: {{user.first_name}}{% endblock %}
+{% block heading %}Profile: {{user.first_name}} {{user.last_name}}{% endblock %}
 {% block content %}
 <p>First Name: {{user.first_name}}</p>
 <p>Last Name: {{user.last_name}}</p>
 <p>Email: {{user.email}}</p>
-<p>Website: {{user.website}}</p>
-<p>Resume: {{user.resume}}</p>
-<p>Interest(s):
-  <ul>
-    {% for interest in user.interests %}
-    <li>{{interest.field}}</li>
-    {% endfor %}
-  </ul>
-</p>
 <p>Department(s):
   <ul>
-    {% for department in user.departments %}
+    {% for department in user.departments|sort(attribute='dept_id') %}
     <li>{{department.dept_id}}</li>
     {% endfor %}
   </ul>
 </p>
+<p>Interest(s):
+  <ul>
+    {% for interest in user.interests|sort(attribute='field') %}
+    <li>{{interest.field}}</li>
+    {% endfor %}
+  </ul>
+</p>
+<p>Website: {{user.website}}</p>
+<p>Resume: {{user.resume}}</p>
 <hr/>
 <p><a href="{{url_for('edit_person', netid=user.netid)}}">Edit</a>
   this information.</p>
