--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -1,17 +1,22 @@
 {% extends 'layout.html' %}
+{% block css %}
+{% endblock %}
 {% block heading %}Search Results{% endblock %}
 {% block content %}
-   <BODY>
-   	{%for faculty in users%}
-    <h3>{{faculty.firstname} {faculty.lastname}}</h3>
-      <UL>
-         <LI> Title: faculty.title
-         {% for dept in faculty.departments %}
-         <LI> Department: dept
+   <body>
+   	{%for faculty in matches%}
+    <h3>{{faculty['firstname']} {faculty['lastname']}}</h3>
+      <ul>
+         <li> Title: faculty['title'] </li>
+         {% for dept in faculty['departments'] %}
+         <li> Department: dept
          	{% end for %}
-         <LI> Interests: faculty.interests
-      </UL>
+         </li>
+         <li> Interests: faculty['interests'] </li>
+      </ul>
       {% endfor %}
-   </BODY>
+   </body>
 
+{% endblock %}
+{% block jquery %}
 {% endblock %}
