--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -1,77 +1,88 @@
 {% extends 'layout.html' %}
-{% block heading %}Edit User Profile: {{user.first_name}}{% endblock %}
+{% block heading %}<div class="container">
+<div class="page-hearder">Edit Profile</div></div>{% endblock %}
 {% block content %}
-<form action="{{url_for('edit_person', netid=user.netid)}}" method="POST">
-  {{form.csrf_token}}
-  <p>
-    First Name: {{form.first_name}}
-    {% if form.first_name.errors %}
-    <ul>{% for error in form.first_name.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p>
-    Last Name: {{form.last_name}}
-    {% if form.last_name.errors %}
-    <ul>{% for error in form.last_name.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p>
-    Email: {{form.email}}
-    {% if form.email.errors %}
-    <ul>{% for error in form.email.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p>
-    Interest(s): {{form.interests}}
-    {% if form.interests.errors %}
-    <ul>{% for error in form.interests.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p>
-    Department 1: {{form.department1}}
-    {% if form.department1.errors %}
-    <ul>{% for error in form.department1.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p>
-    Department 2: {{form.department2}}
-    {% if form.department2.errors %}
-    <ul>{% for error in form.department2.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p id="role">
-    {{form.role.label}}: {{form.role}}
-    {% if form.role.errors %}
-    <ul>{% for error in form.role.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p class="faculty">
-    {{form.title.label}}: {{form.title}}
-    {% if form.title.errors %}
-    <ul>{% for error in form.title.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p class="faculty">
-    {{form.opening.label}}: {{form.opening}}
-    {% if form.opening.errors %}
-    <ul>{% for error in form.opening.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p class="student">
-    {{form.status.label}}: {{form.status}}
-    {% if form.status.errors %}
-    <ul>{% for error in form.status.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p class="student">
-    {{form.start_year.label}}: {{form.start_year}}
-    {% if form.start_year.errors %}
-    <ul>{% for error in form.start_year.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <hr/>
-  <input type="reset" value="Reset"/>
-  <input type="submit" value="Submit"/>
-  {% if 'database' in form.errors %}<p>{{form.errors['database']}}</p>{% endif %}
-</form>
+<div class="container">
+  <div class="row">
+    <div class="col-md-14">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <form action="{{url_for('edit_person', netid=user.netid)}}" method="POST">
+            {{form.csrf_token}}
+            <p>
+              <strong>First Name</strong>: {{form.first_name}}
+              {% if form.first_name.errors %}
+              <ul>{% for error in form.first_name.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p>
+              <strong>Last Name</strong>: {{form.last_name}}
+              {% if form.last_name.errors %}
+              <ul>{% for error in form.last_name.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p>
+              <strong>Email</strong>: {{form.email}}
+              {% if form.email.errors %}
+              <ul>{% for error in form.email.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p>
+              <strong>Interest(s)</strong>: {{form.interests}}
+              {% if form.interests.errors %}
+              <ul>{% for error in form.interests.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p>
+              <strong>Department 1</strong>: {{form.department1}}
+              {% if form.department1.errors %}
+              <ul>{% for error in form.department1.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p>
+              <strong>Department 2</strong>: {{form.department2}}
+              {% if form.department2.errors %}
+              <ul>{% for error in form.department2.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p id="role">
+              {{form.role.label}}: {{form.role}}
+              {% if form.role.errors %}
+              <ul>{% for error in form.role.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p class="faculty">
+              {{form.title.label}}: {{form.title}}
+              {% if form.title.errors %}
+              <ul>{% for error in form.title.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p class="faculty">
+              {{form.opening.label}}: {{form.opening}}
+              {% if form.opening.errors %}
+              <ul>{% for error in form.opening.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p class="student">
+              {{form.status.label}}: {{form.status}}
+              {% if form.status.errors %}
+              <ul>{% for error in form.status.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p class="student">
+              {{form.start_year.label}}: {{form.start_year}}
+              {% if form.start_year.errors %}
+              <ul>{% for error in form.start_year.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <hr/>
+            <input type="reset" value="Reset"/>
+            <input type="submit" value="Submit"/>
+            {% if 'database' in form.errors %}<p>{{form.errors['database']}}</p>{% endif %}
+          </form>
+        </div><!--/panel-body-->
+      </div><!--/panel-->
+    </div>
+  </div>
+</div>
 {% endblock %}
