updated login and signup styling

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,8 +14,7 @@
         <a class="navbar-brand" href="{{url_for('login')}}">Research Finder</a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="{{url_for('login')}}">Log In</a></li>
-        <li><a href="{{url_for('signup')}}">Sign Up</a></li>
+        <li><a href="{{url_for('login')}}">Log In/Sign Up</a></li>
         <li><a href="{{url_for('search')}}">Search</a></li>
       </ul>
     </div>
