--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,37 @@
 {% extends 'layout.html' %}
-{% block heading %}Login{% endblock %}
+{% block heading %}<div class="container">
+<div class="page-hearder">Log In</div></div>
+{% endblock %}
 {% block content %}
-<form action="{{url_for('login')}}" method="POST">
-  {{form.csrf_token}}
-  <p>
-    {{form.netid.label}}: {{form.netid}}
-    {% if form.netid.errors %}
-    <ul>{% for error in form.netid.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <p>
-    {{form.password.label}}: {{form.password}}
-    {% if form.password.errors %}
-    <ul>{% for error in form.password.errors %}<li>{{error}}</li>{% endfor %}</ul>
-    {% endif %}
-  </p>
-  <hr/>
-  <input type="submit" value="Submit"/>
-  {% if 'database' in form.errors %}<p>{{form.errors['database']}}</p>{% endif %}
-</form>
-<p>
-  <a href="{{url_for('signup')}}">Do not have an account yet?</a>
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-14">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <form action="{{url_for('login')}}" method="POST">
+            {{form.csrf_token}}
+            <p>
+              {{form.netid.label}}: {{form.netid}}
+              {% if form.netid.errors %}
+              <ul>{% for error in form.netid.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <p>
+              {{form.password.label}}: {{form.password}}
+              {% if form.password.errors %}
+              <ul>{% for error in form.password.errors %}<li>{{error}}</li>{% endfor %}</ul>
+              {% endif %}
+            </p>
+            <hr/>
+            <input type="submit" value="Submit"/>
+            {% if 'database' in form.errors %}<p>{{form.errors['database']}}</p>{% endif %}
+            <p>
+              <a href="{{url_for('signup')}}">Do not have an account yet?</a>
+            </p>
+          </form>
+        </div><!--/panel-body-->
+      </div><!--/panel-->
+    </div>
+  </div>
+</div>
 {% endblock %}
