--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,8 +19,14 @@
   </ul>
 </p>
 <p>Website: {{user.website}}</p>
-<p>Resume: {{user.resume}}</p>
+<p>Resume: 
+  {% if user.resume %}
+  <a href="/resume/{{user.netid}}.pdf" target="_blank">View</a>
+  {% else %}
+  None
+  {% endif %}
+</p>
 <hr/>
-<p><a href="{{url_for('edit_person', netid=user.netid)}}">Edit</a>
+<p><a href="{{url_for('edit_profile', netid=user.netid)}}">Edit</a>
   this information.</p>
 {% endblock %}
