--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,7 +19,7 @@
               </p>
               <p><strong>Resume: </strong>
                 {% if user.resume %}
-                <a href="/resume/{{user.netid}}.pdf" target="_blank">View</a>
+                <a href="{{url_for('resume', netid=user.netid)}}" target="_blank">View</a>
                 {% else %}
                 None
                 {% endif %}
@@ -46,7 +46,7 @@
             <!--/col-->
 
             <div class="col-xs-12 col-sm-4">
-              <a class="btn btn-success btn-block" href="{{url_for('edit_person', netid=user.netid)}}">
+              <a class="btn btn-success btn-block" href="{{url_for('edit_profile', netid=user.netid)}}">
                 <span class="fa fa-plus-circle"></span> Edit </a>
             </div>
             <!--/col-->
