--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -4,9 +4,8 @@
 {% block heading %}Search Results{% endblock %}
 {% block content %}
 <body>
-    {%for user in matches%}
     <ul>
-        <h3>{{user.firstname} {user.lastname}}</h3>
+        <h3>{{user.first_name}}</h3>
         <ul>
             <li> Title: {{user.title}} </li>
 
@@ -14,20 +13,18 @@
                 <ul>
                     {% for dept in user.departments %}
                     <li>{{dept.dept_id}}</li>
-                    {% end for %}
+                    {% endfor %}
                 </ul>
             </li>
             <li> Interests:
                 <ul>
                     {% for interest in user.interests %}
                     <li>{{interest.field}}</li>
-                    {% end for %}
+                    {% endfor %}
                 </ul>
             </li>
         </ul>
       </ul>
-   {%end for%}
-
 </body>
 
 {% endblock %}
