--- a/templates/searchresults.html
+++ b/templates/searchresults.html
@@ -5,20 +5,22 @@
 {% block content %}
 <body>
     <ul>
-        <h3>{{user.first_name}}</h3>
+        <h3>{{user.first_name} {user.last_name}}</h3>
         <ul>
             <li> Title: {{user.title}} </li>
 
             <li> Departments:
                 <ul>
-                    {% for dept in user.departments %}
+                    {% for dept in user.departments|sort(attribute='dept_id') %}
                     <li>{{dept.dept_id}}</li>
                     {% endfor %}
                 </ul>
             </li>
+            <li>Email: {{user.email}}</li>
+            <li>Website: {{user.website}}</li>
             <li> Interests:
                 <ul>
-                    {% for interest in user.interests %}
+                    {% for interest in user.interests|sort(attribute='field') %}
                     <li>{{interest.field}}</li>
                     {% endfor %}
                 </ul>
