--- a/templates/results.html
+++ b/templates/results.html
@@ -1,35 +1,25 @@
 {% extends 'layout.html' %}
-{% block css %}
-{% endblock %}
 {% block heading %}Search Results{% endblock %}
 {% block content %}
-<body>
-    {%for user in matches%}
+    {% for user in matches %}
     <ul>
-        <h3>{{user.firstname} {user.lastname}}</h3>
+        <h3><a href="{{url_for('profile', netid=user.netid)}}">{{user.first_name}} {{user.last_name}}</a></h3>
         <ul>
-            <li> Title: {{user.title}} </li>
-
             <li> Departments:
                 <ul>
                     {% for dept in user.departments %}
                     <li>{{dept.dept_id}}</li>
-                    {% end for %}
+                    {% endfor %}
                 </ul>
             </li>
             <li> Interests:
                 <ul>
                     {% for interest in user.interests %}
                     <li>{{interest.field}}</li>
-                    {% end for %}
+                    {% endfor %}
                 </ul>
             </li>
         </ul>
       </ul>
-   {%end for%}
-
-</body>
-
-{% endblock %}
-{% block jquery %}
+   {% endfor %}
 {% endblock %}
