--- a/templates/search.html
+++ b/templates/search.html
@@ -1,12 +1,4 @@
 {% extends 'layout.html' %}
-{% block css %}
-<style>
-  .nav {
-    opacity: 70%;
-  }
-</style>
-<link rel="stylesheet" href="/static/css/searchpage.css" type="text/css" media="screen" />
-{% endblock %}
 {% block heading %}Search{% endblock %}
 {% block content %}
 <center>
@@ -17,54 +9,56 @@
           <div class="panel-body">
             <form action="{{url_for('search')}}" method="POST">
               {{form.csrf_token}}
-              <tr>
-                <td>
-                  <strong>{{form.dept.label}}</strong>:
-                </td>
-                <td>
-                  {{form.dept}} {% if form.dept.errors %}
-                  <ul>
-                    {% for error in form.dept.errors %}
-                    <li>
-                      {{error}}
-                    </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <strong>{{form.name.label}}</strong>:
-                </td>
-                <td>
-                  {{form.name}} {% if form.name.errors %}
-                  <ul>
-                    {% for error in form.name.errors %}
-                    <li>
-                      {{error}}
-                    </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <strong>{{form.interest.label}}</strong>:
-                </td>
-                <td>
-                  {{form.interest}} {% if form.interest.errors %}
-                  <ul>
-                    {% for error in form.interest.errors %}
-                    <li>
-                      {{error}}
-                    </li>
-                    {% endfor %}
-                  </ul>
-                  {% endif %}
-                </td>
-              </tr>
+              <table>
+                <tr>
+                  <td>
+                    <strong>{{form.dept.label}}</strong>:
+                  </td>
+                  <td>
+                    {{form.dept}} {% if form.dept.errors %}
+                    <ul>
+                      {% for error in form.dept.errors %}
+                      <li>
+                        {{error}}
+                      </li>
+                      {% endfor %}
+                    </ul>
+                    {% endif %}
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>{{form.name.label}}</strong>:
+                  </td>
+                  <td>
+                    {{form.name}} {% if form.name.errors %}
+                    <ul>
+                      {% for error in form.name.errors %}
+                      <li>
+                        {{error}}
+                      </li>
+                      {% endfor %}
+                    </ul>
+                    {% endif %}
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <strong>{{form.interest.label}}</strong>:
+                  </td>
+                  <td>
+                    {{form.interest}} {% if form.interest.errors %}
+                    <ul>
+                      {% for error in form.interest.errors %}
+                      <li>
+                        {{error}}
+                      </li>
+                      {% endfor %}
+                    </ul>
+                    {% endif %}
+                  </td>
+                </tr>
+              </table>
               <hr/>
               <input type="reset" value="Reset" />
               <input type="submit" value="Submit" />
