--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,7 @@
 {% extends 'layout.html' %}
-{% block heading %}Search{% endblock %}
+{% block heading %}<div class="container">
+  <div class="page-hearder">Search</div>
+</div>{% endblock %}
 {% block content %}
 <center>
   <div class="container">
